@@ -1,3 +1,14 @@
+9 September 2008
++ Using Eloi's new Comments patch #2052452
++ Removing logError from Comment_User.php
++ Removing postSettings from Comments.php
++ Changed default comment listing
++ Moved user rank retrieval to Comments as function
++ Fixed approval template.
++ Added stylized buttons
++ Updated: javascript/expandCollapse
+
+
 22 August 2008
 + Added switch for using tinymce editor
 
